Correct form width on smaller devices

--- a/components/_input.scss
+++ b/components/_input.scss
@@ -9,6 +9,10 @@
     flex-direction: column;
     width: 45%;
     margin-bottom: 8rem;
+
+    @include responsive(tab-land) {
+      width: 80%;
+    }
   }
 
   &-button__wrapper {
