--- a/main.css
+++ b/main.css
@@ -417,6 +417,12 @@ header {
   margin-bottom: 8rem;
 }
 
+@media only screen and (max-width: 1400px) {
+  .contact-form {
+    width: 80%;
+  }
+}
+
 .contact-button__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
